--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "-": "^0.0.1",
     "@tanstack/react-query": "^5.72.2",
     "autoprefixer": "^10.4.16",
+    "framer-motion": "^12.9.1",
     "next": "15.3.0",
     "postcss": "^8.4.31",
     "react": "^19.0.0",
